0029127: Visualization - V3d_View::ToPixMap() crashes on tiled rendering without FBO

Fixed out-of-memory writing within fallback View dump mode.